# python-microservices-monorepo-template

./: README.md
.github/workflows/: infrastructure.yaml
services/fastapi_service/app/schemas/: sample_schema.py
services/lambda_service/: .python-version  Dockerfile  README.md  Taskfile.yml  main.py  pyproject.toml
services/lambda_service/tests/: conftest.py  test_main.py
services/lambda_service/utils/: date_utils.py
